Name:            falling2d
Version:         0.0.0.0
Description:     2d physics engine
License:         BSD3
License-file:    LICENSE
Author:          Sébastien Croze
Maintainer:      developer@crozet.re
Build-Type:      Simple
Cabal-Version:   >=1.2

Library
  Exposed-modules: Physics.Falling2d.World2d
                   Physics.Falling2d.InertiaTensor2d
                   Physics.Falling2d.FakeNarrowPhase2d
                   Physics.Falling2d.RigidBody2d
                   Physics.Falling2d.Shape2d
                   Physics.Falling2d.Rectangle
                   Physics.Falling2d.Shape2dNarrowPhase
                   Physics.Falling2d.Collision2d
                   Physics.Falling2d.Transform2d
                   Physics.Falling2d.Vec1
                   Physics.Falling2d.UnitSphere2d
  Build-Depends:   base, vect, falling, normaldistribution, random
  ghc-options:     -Wall -O2
  -- -prof -auto-all -caf-all
